# users_chat

./: .env-non-dev_example  .env_example  .gitignore  Makefile  README.md  docker-compose.yml
api/: .coverage  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 512ef01f1b9a_init3.py  840690aa2e2d_init2.py  ac0fd9515be7_initial_migration.py  ad6e7b6a864b_init.py  af60c141fbe9_remove_avatar_link.py  cb1e68a1e6b2_init.py
api/app/: main.py
api/app/aiogram_bot/: main.py
api/app/config/: app_config.py  db_config.py  dependencies.py  logger_config.py  redis_config.py
api/app/models/: comment.py  label.py  like.py  meme.py  message.py  user.py
api/app/repositories/: comments_repository.py  labels_repository.py  likes_repository.py  memes_repository.py  messages_repository.py  storage_repository.py  users_repository.py
api/app/routers/: auth.py  chat.py  comments.py  labels.py  likes.py  memes.py  users.py
api/app/schemas/: comments.py  labels.py  likes.py  memes.py  messages.py  users.py
api/app/tasks/: tasks.py
api/app/tests/: conftest.py  test_comments.py  test_labels.py  test_memes.py  test_messages.py  test_protected_routes.py
api/app/tests/fake/: fake_storage_repository.py
api/app/tests/fixtures/: test_data.py
api/app/utils/: auth_utils.py  chat_utils.py  other_utils.py  wc_connect.py
api/reports/junit/: junit.xml
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: ChatModal.jsx  IndexPage.jsx  LoginPage.jsx  (+1 more)
nginx_conf/: nginx_config.conf
(+4 files in other folders)
