[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["al-ov73 <klever1987@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
psycopg2-binary = "^2.9.9"
trio = "^0.26.0"
gunicorn = "^22.0.0"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^5.0.8"
aioredis = "^2.0.1"
websockets = "^13.0"
sqlalchemy-utils = "^0.41.2"
flake8 = "^7.1.1"
celery = "^5.4.0"
aiogram = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
